# shmup-prototype2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lines.sh
data/def/: tiles.json
data/maps/: level01.map
data/shaders/: basic.vs  colorgrading.fs  tile-base-emission.fs  tile-base.fs  tile-omni.fs  tile-omni.vs
src/: Application.cpp  Application.h  CMakeLists.txt  Camera.h  EnemyEntity.cpp  EnemyEntity.h  Entity.cpp  Entity.h  Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  Light.h  Logger.cpp  Logger.h  MaterialPrototype.h  PlayerEntity.cpp  PlayerEntity.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h  TextureManager.cpp  TextureManager.h  Tile.cpp  Tile.h  TileFactory.cpp  TileFactory.h  config.h.in  main.cpp  math.cpp  math.h  paths.cpp  paths.h
